appId: com.logseq.app
---
- launchApp
- extendedWaitUntil:
    visible: ".*E2E Outliner Fixture.*"
    timeout: 30000
- tapOn: "Edit block E2E Outliner Fixture.*"
- assertVisible:
    id: "toolbar.outliner.editor"
- tapOn:
    id: "button.outliner.editor.tag"
- extendedWaitUntil:
    visible:
      id: "toolbar.outliner.autocomplete"
    timeout: 10000
- assertVisible: "Card"
- tapOn:
    id: "button.outliner.autocomplete\\..*"
    index: 0
- assertNotVisible:
    id: "toolbar.outliner.autocomplete"
- assertVisible:
    id: "toolbar.outliner.editor"
- swipe:
    start: 80%, 94%
    end: 15%, 94%
    duration: 800
- tapOn:
    id: "button.outliner.editor.pageReference"
- extendedWaitUntil:
    visible:
      id: "toolbar.outliner.autocomplete"
    timeout: 10000
- tapOn:
    id: "button.outliner.autocomplete\\..*"
    index: 0
- assertNotVisible:
    id: "toolbar.outliner.autocomplete"
- assertVisible:
    id: "toolbar.outliner.editor"
- assertNotVisible: "outliner_effect_failed"
