appId: com.logseq.logseq
---
- runFlow:
    file: "__LOGSEQ_E2E_SETUP_FLOW__"
- launchApp
- tapOn:
    id: "button.sidebar"
- tapOn:
    id: "link.sidebar.journals"
    retryTapIfNoChange: true
- extendedWaitUntil:
    notVisible:
      id: "button.sidebar.dismiss"
    timeout: 10000
- extendedWaitUntil:
    visible:
      id: "button.journal.00000001-2026-0821-0000-000000000000"
    timeout: 30000
- tapOn:
    id: "button.journal.00000001-2026-0821-0000-000000000000"
- assertVisible:
    id: "BackButton"
- assertVisible: "Aug 21st, 2026"
- assertVisible: "E2E anchor A.*"
- assertNotVisible: "Node"
- assertNotVisible: "In progress"
