appId: com.logseq.logseq
---
- runFlow:
    file: "__LOGSEQ_E2E_SETUP_FLOW__"
- launchApp
- assertVisible:
    id: "pane.journals"
- assertVisible: "Aug 21st, 2026"
- tapOn: "Edit block Untitled block"
- pressKey: ENTER
- assertVisible:
    id: "toolbar.outliner.editor"
- assertNotVisible:
    text: "Syncing"
    childOf:
      id: "pane.journals"
