appId: com.logseq.logseq
---
- runFlow:
    file: "__LOGSEQ_E2E_SETUP_FLOW__"
- launchApp
- assertVisible:
    id: "pane.journals"
- tapOn: "Edit block Untitled block"
- assertVisible:
    id: "toolbar.outliner.editor"
- assertVisible: "[[]]"
