appId: com.logseq.logseq
---
- runFlow:
    file: "__LOGSEQ_E2E_SETUP_FLOW__"
- launchApp
- assertVisible:
    id: "pane.journals"
- tapOn: "Edit block Untitled block"
- tapOn:
    id: "button.outliner.editor.pageReference"
- assertVisible:
    id: "field.outliner.block.*"
    text: "[[]]"
- pressKey: BACKSPACE
- assertNotVisible:
    id: "field.outliner.block.*"
    text: "[]]"
- assertVisible:
    id: "toolbar.outliner.editor"
